testing/py3-webtest: upgrade to 2.0.34

--- a/testing/py3-webtest/APKBUILD
+++ b/testing/py3-webtest/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-webtest
 _pkgname=WebTest
-pkgver=2.0.33
-pkgrel=1
+pkgver=2.0.34
+pkgrel=0
 pkgdesc="A Helper to test WSGI applications"
 options="!check" # Requires unpackaged dependencies
 url="http://webtest.pythonpaste.org/"
@@ -13,7 +13,7 @@ depends="python3"
 makedepends="py3-setuptools py3-waitress py3-six py3-beautifulsoup4 py3-webob"
 source="https://pypi.io/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 
-repalces="py-webtest" # Backwards compat
+replaces="py-webtest" # Backwards compat
 provides="py-webtest=$pkgver-r$pkgrel" # Backwards compat
 
 builddir="$srcdir"/$_pkgname-$pkgver
@@ -26,4 +26,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="9f5c614f8215837dc5cecc9c3e844c5e1678eb8275f9e27a0ec6a68648e9f4f09155aa72f6c731c34028b8671b7776a94235f3e54d7dbf5ff55de94840171ca8  WebTest-2.0.33.tar.gz"
+sha512sums="12f0d3e891d436f011f4a3a2e8e64363d87713d2a410b9220271e5f0c0b918b5cd87dc4359d1164cb67e02ad318eabfae282b4eaacb4804afbf475abebc6fd95  WebTest-2.0.34.tar.gz"
