--- a/community/py3-s3transfer/APKBUILD
+++ b/community/py3-s3transfer/APKBUILD
@@ -2,13 +2,13 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 pkgname=py3-s3transfer
 _pkgname=s3transfer
-pkgver=0.2.1
-pkgrel=1
+pkgver=0.3.2
+pkgrel=0
 pkgdesc="Amazon S3 Transfer Manager for Python"
 url="https://github.com/boto/s3transfer"
 arch="noarch"
 license="Apache-2.0"
-depends="py3-botocore"
+depends="py3-botocore<2.0.0"
 makedepends="py3-setuptools"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/boto/$_pkgname/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
@@ -28,4 +28,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="7bd528c6f0383e22dcceab59ed3e9b3f4f2ec3c6e6906a789be5ef3e25f6157ea1901d556b264ac4bc479a910ec55bcb9ecec911e27843ac38265fb14659f2a5  s3transfer-0.2.1.tar.gz"
+sha512sums="29f38ba4808dcb5f6adf4f4e813bca457abdfe071ee5dd6f164f1dfc3e75a301b945c1fa6f486829c2872b0d17f23a1feb684921225b653301f19f92861baf7a  s3transfer-0.3.2.tar.gz"
