testing/lxd: upgrade to 3.20

--- a/testing/lxd/APKBUILD
+++ b/testing/lxd/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=lxd
-pkgver=3.18
-pkgrel=2
+pkgver=3.20
+pkgrel=0
 pkgdesc="a container hypervisor and a new user experience for LXC"
 url="https://linuxcontainers.org/lxd/"
 arch="all !aarch64"
@@ -28,6 +28,7 @@ makedepends="
 	acl-dev
 	tcl-dev
 	libuv-dev
+	eudev-dev
 	libcap-dev
 	linux-headers
 
@@ -105,7 +106,7 @@ build() {
 
 	cd "$builddir"
 	go install -v -x -tags libsqlite3 $_project/lxd
-	for bin in lxc fuidshift lxc-to-lxd lxd-benchmark lxd-p2c; do
+	for bin in lxc fuidshift lxc-to-lxd lxd-benchmark lxd-agent lxd-p2c; do
 		go install -v -x $_project/$bin
 	done
 }
@@ -151,7 +152,7 @@ scripts() {
 	export GOPATH="$builddir/_dist"
 	cd $GOPATH
 
-	for tool in fuidshift lxc-to-lxd lxd-benchmark lxd-p2c; do
+	for tool in fuidshift lxc-to-lxd lxd-benchmark lxd-agent lxd-p2c; do
 		install -Dm755 bin/$tool "$subpkgdir"/usr/bin/$tool
 	done
 	install -Dm755 ../scripts/empty-lxd.sh "$subpkgdir"/usr/bin/empty-lxd.sh
@@ -168,8 +169,8 @@ libs() {
 	rm -r "$pkgdir"/etc
 }
 
-sha512sums="bc9a061569b7ec1997f634fa2b9fee95b47384357eb5f19e528e831e3bfc11363054b169e4f3ebc0141e493f6999b276eb9f3e424a7a6b4c0f5b2701ee91fa51  lxd-3.18.tar.gz
+sha512sums="c3ee844935eceb8b62364cbc4ca894c0145870ac44712fbd9ddae4b6baca6959f45d14475550392b504c6dccaeb848fe40f47629cf8f0554ff78c0bd18a8e077  lxd-3.20.tar.gz
 bc32c71f2ce10f508433e1e4651c08c18e8a17e9419a7ce391c0f127fc7cf378c665178926b35eae8813e290d9c5eab3ceb605679fd32efdf2cf98a57cee4127  lxd.confd
 94de0c0d5ab63463a929a4151359950b1117d0ada5ccf0944311cc70c6b6d4c437ccb4158734ab35db67bfb4abc437074c3f3515be4531f63adc74da21fefb5b  lxd.initd
-7453a02f003b2b3ccc2695649ca6b39157f1bd30070815e6addaacb280ea935d79bc5d265925aeec379a16f0235387d8333c3f25519c959b980fe15ad2d5728c  lxd-dont-go-get.patch
+6bd42ac2571eb77fc3761f549bf77771fbfc4dad8934f9ccf6e421b2874ae5205345511d46f16f69b0b653e859d8019382c5da077db9cbb8149ae883d544215c  lxd-dont-go-get.patch
 c9291e7df7e7d62324d6f31460268b138eaeb7928b2aceb9e1763bc123c4410557a887847e441c03efb92642a6c39c8db6557e2af6a738ac46a9df93b5ac1d3b  add-missing-includes.patch"
