--- a/community/remind/APKBUILD
+++ b/community/remind/APKBUILD
@@ -1,8 +1,7 @@
 # Contributor: Kaarle Ritvanen <kaarle.ritvanen@datakunkku.fi>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=remind
-pkgver=03.02.00
-_pkgver=03.01.15
+pkgver=03.03.00
 pkgrel=0
 pkgdesc="Sophisticated calendar and alarm program"
 url="https://dianne.skoll.ca/projects/remind/"
@@ -10,11 +9,9 @@ arch="all"
 license="GPL-2.0"
 options="!check"
 subpackages="$pkgname-doc tkremind::noarch"
-source="https://dianne.skoll.ca/projects/remind/download/$pkgname-$_pkgver.tar.gz"
-builddir="$srcdir"/$pkgname-$_pkgver
+source="https://dianne.skoll.ca/projects/remind/download/remind-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -23,7 +20,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -36,4 +32,4 @@ tkremind() {
 	mv "$src"/cm2rem.tcl "$src"/tkremind "$dest"
 }
 
-sha512sums="335f3ca88237f1ae53768b9ecdeb03f0bb1e706a8afd3ba36121ec76048a08fbc0d5ec72b05e552394b4cf2131be335c49533e1212b7e713ef16002a0621fc84  remind-03.01.15.tar.gz"
+sha512sums="0ddd751e42e01a841f46eb21a1392d353efa4e4d63c15b7ba6d7874becb16af537df4e41683db5b1bc3749d5e334c972f8b708b92bbe6f0a9e5bb6a80756486c  remind-03.03.00.tar.gz"
