testing/perl-libapreq2: modernize

--- a/testing/perl-libapreq2/APKBUILD
+++ b/testing/perl-libapreq2/APKBUILD
@@ -3,41 +3,37 @@
 pkgname=perl-libapreq2
 _pkgreal=libapreq2
 pkgver=2.13
-pkgrel=7
+pkgrel=8
 pkgdesc="Perl module for libapreq2"
-url="http://search.cpan.org/dist/libapreq2/"
+url="https://metacpan.org/release/libapreq2/"
 arch="all"
 license="GPL PerlArtistic"
-cpandepends=""
-cpanmakedepends=""
 depends="apache2 perl"
 subpackages="$pkgname-dev $pkgname-doc"
 install="$pkgname.post-install"
 makedepends="perl-extutils-xsbuilder perl-dev libtool apache2-dev apache2-mod-perl-dev expat-dev apr-util-dev"
-source="http://search.cpan.org/CPAN/authors/id/I/IS/ISAAC/$_pkgreal-$pkgver.tar.gz
+source="https://cpan.metacpan.org/authors/id/I/IS/ISAAC/$_pkgreal-$pkgver.tar.gz
 	libapreq2-2.08-doc.patch
 	$pkgname.conf"
 
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
-	default_prepare || return 1
-	update_config_guess || return 1
+	default_prepare
+	update_config_guess
 }
 
 build() {
-        cd "$builddir"
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL \
 		--with-apache2-apxs=/usr/bin/apxs \
-		--with-apache2-httpd=/usr/sbin/httpd || return 1
-        make || return 1
+		--with-apache2-httpd=/usr/sbin/httpd
+	make
 }
 
 package() {
-        cd "$builddir"
-        make DESTDIR="$pkgdir" INSTALLDIRS="vendor" install
+	make DESTDIR="$pkgdir" INSTALLDIRS="vendor" install
 	install -Dm644 "$srcdir"/$pkgname.conf \
-		"$pkgdir"/etc/apache2/conf.d/perl-libapreq2.conf || return 1
+		"$pkgdir"/etc/apache2/conf.d/perl-libapreq2.conf
 	find "$pkgdir" -name mod_apreq2.la -delete
 	find "$pkgdir" -name libapreq2.la -delete
 }
