--- a/testing/perl-www-curl/APKBUILD
+++ b/testing/perl-www-curl/APKBUILD
@@ -4,16 +4,17 @@
 pkgname=perl-www-curl
 _pkgreal=WWW-Curl
 pkgver=4.17
-pkgrel=6
+pkgrel=7
 pkgdesc="Perl extension interface for libcurl"
 url="https://metacpan.org/release/WWW-Curl"
 arch="all"
 license="MIT"
 makedepends="perl-dev curl-dev"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/S/SZ/SZBALINT/$_pkgreal-$pkgver.tar.gz
+source="https://cpan.metacpan.org/authors/id/S/SZ/SZBALINT/$_pkgreal-$pkgver.tar.gz
 	WWW-Curl-4.17-RT117793.patch
 	perl-5.26.patch
+	fix-curl.xs.patch
 	"
 
 builddir="$srcdir/$_pkgreal-$pkgver"
@@ -39,4 +40,5 @@ package() {
 
 sha512sums="bc7a75d0e23f5a77578fd7244b56a1e1b81d814993b90ac7132926f0d571232c4c95875bc615cb6239e424ae1d5481d27796efc5376bb0845d1da0ff1137c0d6  WWW-Curl-4.17.tar.gz
 d92cb37435d66867578818776f3ef64f4f6295515639d9bf860907ad28ca4109435c45174b49bdeb594a0cddafcc3f833c41d15d641eadfbbec598b77a1e90df  WWW-Curl-4.17-RT117793.patch
-a0e91afecc23df532c1256255b202152597d00fd6e677d25a473fb0ce5e6d2a0be978298fee9dd73343765a1ad925afea5c73be458ace4311c733a14d0f55bae  perl-5.26.patch"
+a0e91afecc23df532c1256255b202152597d00fd6e677d25a473fb0ce5e6d2a0be978298fee9dd73343765a1ad925afea5c73be458ace4311c733a14d0f55bae  perl-5.26.patch
+5bdd2fcdc235d28b811c9197bc24f80857476a2704212b63f762aa61252665ddbfc2fb3493952426d3760c76e1f3ea23298fc040770664de87deab4945d3bb36  fix-curl.xs.patch"
