community/openspecfun: rebuild against mpfr4

--- a/community/openspecfun/APKBUILD
+++ b/community/openspecfun/APKBUILD
@@ -2,30 +2,25 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=openspecfun
 pkgver=0.5.3
-pkgrel=2
+pkgrel=3
 pkgdesc="A collection of special mathematical functions."
 url="https://github.com/JuliaLang/openspecfun"
 arch="all !s390x"
 license="MIT Public-Domain"
-depends=""
 makedepends="openlibm-dev gfortran"
+options="!check" # no tests
 subpackages="$pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/JuliaLang/$pkgname/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/JuliaLang/openspecfun/archive/v$pkgver.tar.gz
 	openspecfun.pc
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
-
-	make USE_OPENLIBM=1 prefix=/usr || return 1
+	make USE_OPENLIBM=1 prefix=/usr
 	sed "s/@VERSION@/$pkgver/" "$srcdir"/$pkgname.pc > $pkgname.pc
 }
 
 package() {
-	cd "$builddir"
-
-	make DESTDIR="$pkgdir" prefix=/usr install || return 1
+	make DESTDIR="$pkgdir" prefix=/usr install
 	install -D $pkgname.pc "$pkgdir"/usr/lib/pkgconfig/$pkgname.pc
 }
 
