--- a/community/xbps/APKBUILD
+++ b/community/xbps/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: André Klitzing <aklitzing@gmail.com>
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=xbps
-pkgver=0.57.1
+pkgver=0.58
 pkgrel=0
 pkgdesc="The X Binary Package System"
 arch="all"
@@ -14,6 +14,10 @@ subpackages="$pkgname-dev $pkgname-doc
 	$pkgname-zsh-completion:zshcomp:noarch"
 options="!check"
 source="$pkgname-$pkgver.tar.gz::https://github.com/void-linux/xbps/archive/$pkgver.tar.gz"
+
+# secfixes
+#   0.58-r0:
+#     - CVE-2020-7450
 
 build() {
 	./configure \
@@ -51,4 +55,4 @@ _submv() {
 	mv "$pkgdir"/$path "$subpkgdir"/${path%/*}/
 }
 
-sha512sums="bd9768affa458c780b3330ef9f92fc03152d2b026c4b9b659e3cb33c6bb2bfe2840036ef36eec8fc00cc3233c8f237c37635d17223f6b5d3e4bbc83d431c20db  xbps-0.57.1.tar.gz"
+sha512sums="c4df413043aabb17ef9a21cbb58aa116d63d50ed2bcae7a38886ed077fcc72e3f4cbe9723e97b741b3c9403f836ac5edaea86092a7cd44ac29015c1bed483952  xbps-0.58.tar.gz"
