main/libtasn1: upgrade to 4.16.0

--- a/main/libtasn1/APKBUILD
+++ b/main/libtasn1/APKBUILD
@@ -1,16 +1,16 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libtasn1
-pkgver=4.15.0
+pkgver=4.16.0
 pkgrel=0
 pkgdesc="The ASN.1 library used in GNUTLS"
 url="https://www.gnu.org/software/gnutls/"
 arch="all"
-license="GPL-3.0 LGPL"
+license="LGPL-2.1-or-later"
 makedepends="texinfo"
 checkdepends="diffutils"
-subpackages="$pkgname-dev $pkgname-doc"
-source="https://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.gz"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-progs"
+source="https://ftp.gnu.org/gnu/libtasn1/libtasn1-$pkgver.tar.gz"
 
 # secfixes:
 #   4.14-r0:
@@ -27,7 +27,8 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
-		--localstatedir=/var
+		--localstatedir=/var \
+		--disable-static
 	make -j1
 }
 
@@ -38,4 +39,13 @@ check() {
 package() {
 	make DESTDIR="$pkgdir" install
 }
-sha512sums="a8095aebf57a0b482027d06e0ee6978946f267b57bf2db3c891c4656ca35250cc1f72e2e90f4cc0ddbdf6cd2b1783881a62d495a57ad4a98684f8d037307552d  libtasn1-4.15.0.tar.gz"
+
+progs() {
+	license="GPL-3.0-only"
+	pkgdesc="$pkgdesc (utilities)"
+
+	mkdir -p "$subpkgdir"/usr
+	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/bin
+}
+
+sha512sums="b356249535d5d592f9b59de39d21e26dd0f3f00ea47c9cef292cdd878042ea41ecbb7c8d2f02ac5839f5210092fe92a25acd343260ddf644887b031b167c2e71  libtasn1-4.16.0.tar.gz"
