main/perl-dbd-odbc: upgrade to 1.61

--- a/main/perl-dbd-odbc/APKBUILD
+++ b/main/perl-dbd-odbc/APKBUILD
@@ -2,40 +2,36 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=perl-dbd-odbc
 _pkgname=DBD-ODBC
-pkgver=1.60
-pkgrel=3
+pkgver=1.61
+pkgrel=0
 pkgdesc="Perl CPAN DBD::ODBC module"
 url="https://metacpan.org/release/DBD-ODBC/"
 arch="all"
-license="GPL PerlArtistic"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 depends="perl perl-dbi"
-makedepends="perl perl-dev unixodbc-dev"
+makedepends="perl-dev unixodbc-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/M/MJ/MJEVANS/DBD-ODBC-$pkgver.tar.gz"
-builddir="$srcdir"/${_pkgname}-$pkgver
+builddir="$srcdir"/$_pkgname-$pkgver
 
 prepare() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-       cd "$builddir"
-       export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
-       make
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
+	make
 }
 
 check() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="35a365ff305e412c59cb24e6be4f06d2f0fab15154023689a14c928af87a801dad26f95ab91212469dd3e3170a1b7b73aac660b306c25f87d2fd2e02c03048ed  DBD-ODBC-1.60.tar.gz"
+sha512sums="cd20a505b64fd6a6d9a5158c134f9337a9f40879516e4fcb45270dcc20d88ade1ddcf856e36db72b8ca57e34052284f794532f55f0a1f6469cd3d8dff0103435  DBD-ODBC-1.61.tar.gz"
