--- a/community/perl-radiusperl/APKBUILD
+++ b/community/perl-radiusperl/APKBUILD
@@ -3,39 +3,34 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-radiusperl
 _pkgreal=Authen-Radius
-pkgver=0.29
-pkgrel=1
+pkgver=0.31
+pkgrel=0
 pkgdesc="Perl module for RadiusPerl"
 url="https://metacpan.org/release/RadiusPerl/"
 arch="noarch"
-license="GPL PerlArtistic"
-cpandepends=""
-cpanmakedepends="perl-data-hexdump perl-digest-perl-md5 perl-data-dumper"
-depends="$cpandepends"
-makedepends="perl-dev freeradius-dev $cpanmakedepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl"
+makedepends="perl-dev freeradius-dev perl-data-hexdump perl-digest-perl-md5 perl-data-dumper"
 checkdepends="perl-test-nowarnings perl-net-ip"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/P/PO/PORTAONE/$_pkgreal-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 build() {
-	cd "$builddir"
-	mkdir -p ${pkgdir}/etc/raddb
+	mkdir -p $pkgdir/etc/raddb
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 	sed -i "s:/etc/raddb:$pkgdir/etc/raddb:" install-radius-db.PL
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
-	mkdir -p ${pkgdir}/etc/raddb
+	mkdir -p $pkgdir/etc/raddb
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="843604240bdcfb2e125c4c1fadf36de828d93a353c2b86032038bec6c05626a4a654f3ce4be82f805627e286691e948a32e77b3da3964a27d547f4b8091e3851  Authen-Radius-0.29.tar.gz"
+sha512sums="6b78254a6a94f67bd3a5529d4313da779d630a57e2300b02a49034c153b34fec0c6e745c5419f5a5e3ba2996d39907834d3f909ce9fdbd0edc6c43668f89d380  Authen-Radius-0.31.tar.gz"
