main/perl-test-mockobject: upgrade to 1.20200122

--- a/main/perl-test-mockobject/APKBUILD
+++ b/main/perl-test-mockobject/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer:  Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=perl-test-mockobject
 _pkgname=Test-MockObject
-pkgver=1.20191002
-pkgrel=2
+pkgver=1.20200122
+pkgrel=0
 pkgdesc="Perl Mock part of an object or class"
 url="https://metacpan.org/release/Test-MockObject/"
 arch="noarch"
-license="GPL PerlArtistic"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 depends="perl"
 makedepends="perl-dev"
 checkdepends="perl-test-warn perl-test-exception perl-universal-isa perl-universal-can"
@@ -31,4 +31,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="43e8f081e0f5ca71b66739718e3e18be84900aaf74b91e2b41f2e652ee5f4b6c1534abb68e51617ce0e15a1369acd0c4ffbf80dea0af32d0bf6f9e45348c784f  Test-MockObject-1.20191002.tar.gz"
+sha512sums="05c0e007a22cbf24e5566e2045797b26dcadac697c8f0025422ded0c3ca03fa71d9df0149a28a97ea1454a27c77d22c46a80e705fbc309386b7d3220acd03c5f  Test-MockObject-1.20200122.tar.gz"
