community/flatpak: remove systemd contents

--- a/community/flatpak/APKBUILD
+++ b/community/flatpak/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=flatpak
 pkgver=1.6.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Application deployment framework for desktop apps"
 url="https://flatpak.org"
 arch="all"
@@ -15,7 +15,7 @@ makedepends="glib-dev libarchive-dev libsoup-dev libcap-dev polkit-dev
 	libseccomp-dev libxslt-dev gpgme-dev bison"
 subpackages="$pkgname-dev $pkgname-lang"
 install="flatpak.pre-install flatpak.pre-upgrade"
-source="https://github.com/flatpak/$pkgname/releases/download/$pkgver/flatpak-$pkgver.tar.xz
+source="https://github.com/flatpak/flatpak/releases/download/$pkgver/flatpak-$pkgver.tar.xz
 		musl-fixes.patch"
 options="suid !check" # Tests fail with no error message
 
@@ -47,6 +47,7 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="a24fa38091de72c70e500e907ca8856d45335f79db8e70081536fe180a68ce9e22493dcf0697cf3094ed2d478fdf4e16859a72c407331f7821f7acc492cad645  flatpak-1.6.1.tar.xz
