community/glib-networking: remove systemd service

--- a/community/glib-networking/APKBUILD
+++ b/community/glib-networking/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=glib-networking
 pkgver=2.62.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Networking support for GLib"
 url="https://gitlab.gnome.org/GNOME/glib-networking"
 arch="all"
@@ -29,6 +29,7 @@ check() {
 
 package() {
 	DESTDIR="$pkgdir" ninja -C build install
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="6bcf7584a4d97745e980598eb9182ba2e416471455d9c3debc4cbaea07250e395f6d7001af544ce0114a26d726e71e9b420d9756508cda09499016e89f4a6da1  glib-networking-2.62.3.tar.xz"
