main/at-spi2-core: remove systemd service

--- a/main/at-spi2-core/APKBUILD
+++ b/main/at-spi2-core/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=at-spi2-core
 pkgver=2.34.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Protocol definitions and daemon for D-Bus at-spi"
 url="https://www.freedesktop.org/wiki/Accessibility/AT-SPI2/"
 arch="all"
@@ -13,7 +13,6 @@ subpackages="$pkgname-dbg $pkgname-dev $pkgname-lang $pkgname-doc"
 source="https://download.gnome.org/sources/at-spi2-core/${pkgver%.*}/at-spi2-core-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	meson \
 		--buildtype=debugoptimized \
 		--prefix=/usr \
@@ -26,8 +25,8 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C build install
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="99f6773e29fb5fcb339cbe5b23133dab78bc52e3c46a1d5bd748788c48345223f1def5078ac48e58756a7692459b177b0e26dc8059898a5ccac56ceb495b7de8  at-spi2-core-2.34.0.tar.xz"
