--- a/community/font-hermit-nerd/APKBUILD
+++ b/community/font-hermit-nerd/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
-pkgname=font-hermit-nerd
-pkgver=2.0.0
+pkgname=nerd-fonts
+pkgver=2.1.0
 pkgrel=0
 pkgdesc="Iconic font aggregator, collection and patcher"
 url="https://nerdfonts.com"
@@ -8,13 +8,33 @@ arch="noarch"
 options="!check" # No testsuite provided
 license="MIT"
 depends="fontconfig"
-source="$pkgname-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Hermit.zip"
+subpackages="
+	font-hermit-nerd:hermit:noarch
+	font-ia-writer-nerd:writer:noarch
+	"
+source="
+	Hermit-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Hermit.zip
+	ia-Writer-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/iA-Writer.zip
+	"
 builddir="$srcdir"
 
 package() {
+	mkdir -p "$pkgdir"
+}
+
+hermit() {
+	pkgdesc="$pkgdesc (Hermit)"
 	find . -iname 'Hurmit*.otf' | while read -r otf; do
-		install -Dm644 "$otf" "$pkgdir"/usr/share/fonts/OTF/"$otf"
+		install -Dm644 "$otf" "$subpkgdir"/usr/share/fonts/OTF/"$otf"
 	done
 }
 
-sha512sums="8bd0b7e7ed07ab9e5ecb4b348203aa298aecb078ae6b71065d089193aa59956377d9b3d59d65b0d397f157614decc84cc521b7df61878fd8d071bc5e0c29f423  font-hermit-nerd-2.0.0.zip"
+writer() {
+	pkgdesc="$pkgdesc (iA Writer)"
+	find . -iname 'iM Writing*.otf' | while read -r otf; do
+		install -Dm644 "$otf" "$subpkgdir"/usr/share/fonts/OTF/"$otf"
+	done
+}
+
+sha512sums="caf9026646ea1756c0c3d4f5ef08b2329ce10f6bfeefd7a4c7cfba1ac16c85e08103cd05fe4ba9c34fc6f35bb1a5a8830053dc5f90f153410fec12ef134bf84a  Hermit-2.1.0.zip
+6fc219e954295fe4cc1a778141aa464f2b08d73def4c3428e875502d7c1cce1f2d5a4f178a83641e1e4b5d5c45eb406f11ab7858723894dd0bf4ec5e08775adf  ia-Writer-2.1.0.zip"
