community/nerd-fonts: Install ttf iA Writer, Terminus, and Overpass
And don't install Window Compatible fonts and Mono

And install them correctly

--- a/community/nerd-fonts/APKBUILD
+++ b/community/nerd-fonts/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=nerd-fonts
 pkgver=2.1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Iconic font aggregator, collection and patcher"
 url="https://nerdfonts.com"
 arch="noarch"
@@ -11,10 +11,18 @@ depends="fontconfig"
 subpackages="
 	font-hermit-nerd:hermit:noarch
 	font-ia-writer-nerd:writer:noarch
+	font-terminus-nerd:terminus:noarch
+	font-overpass-nerd:overpass:noarch
+	font-ibm-plex-nerd:plex:noarch
+	font-liberation-nerd:liberation:noarch
 	"
 source="
 	Hermit-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Hermit.zip
 	ia-Writer-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/iA-Writer.zip
+	terminus-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Terminus.zip
+	overpass-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Overpass.zip
+	ibm-plex-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/IBMPlexMono.zip
+	liberation-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/LiberationMono.zip
 	"
 builddir="$srcdir"
 
@@ -22,19 +30,57 @@ package() {
 	mkdir -p "$pkgdir"
 }
 
+_install_font_otf() {
+	find "$srcdir" -iname "$1*otf" | while read -r otf; do
+		echo "${otf##*/}" | grep -Eq '(Windows Compatible|Mono).otf' && continue
+		echo "${otf##*/}"
+		install -Dm644 "$otf" -t "$subpkgdir"/usr/share/fonts/OTF
+	done
+}
+
+_install_font_ttf() {
+	find "$srcdir" -iname "$1*ttf" | while read -r ttf; do
+		echo "${ttf##*/}" | grep -Eq '(Windows Compatible|Mono).ttf' && continue
+		echo "${ttf##*/}"
+		install -Dm644 "$ttf" -t "$subpkgdir"/usr/share/fonts/TTF
+	done
+}
+
 hermit() {
 	pkgdesc="$pkgdesc (Hermit)"
-	find . -iname 'Hurmit*.otf' | while read -r otf; do
-		install -Dm644 "$otf" "$subpkgdir"/usr/share/fonts/OTF/"$otf"
-	done
+	_install_font_otf Hurmit
 }
 
 writer() {
 	pkgdesc="$pkgdesc (iA Writer)"
-	find . -iname 'iM Writing*.otf' | while read -r otf; do
-		install -Dm644 "$otf" "$subpkgdir"/usr/share/fonts/OTF/"$otf"
-	done
+	_install_font_otf 'iM Writing'
+	_install_font_ttf 'iM Writing'
+}
+
+terminus() {
+	pkgdesc="$pkgdesc (Terminus)"
+	_install_font_ttf Terminess
+}
+
+overpass() {
+	pkgdesc="$pkgdesc (Overpass)"
+	_install_font_otf Overpass
+	_install_font_ttf Overpass
+}
+
+plex() {
+	pkgdesc="$pkgdesc (IBM Plex)"
+	_install_font_ttf 'Blex Mono'
+}
+
+liberation() {
+	pkgdesc="$pkgdesc (Liberation)"
+	_install_font_ttf Literation
 }
 
 sha512sums="caf9026646ea1756c0c3d4f5ef08b2329ce10f6bfeefd7a4c7cfba1ac16c85e08103cd05fe4ba9c34fc6f35bb1a5a8830053dc5f90f153410fec12ef134bf84a  Hermit-2.1.0.zip
-6fc219e954295fe4cc1a778141aa464f2b08d73def4c3428e875502d7c1cce1f2d5a4f178a83641e1e4b5d5c45eb406f11ab7858723894dd0bf4ec5e08775adf  ia-Writer-2.1.0.zip"
+6fc219e954295fe4cc1a778141aa464f2b08d73def4c3428e875502d7c1cce1f2d5a4f178a83641e1e4b5d5c45eb406f11ab7858723894dd0bf4ec5e08775adf  ia-Writer-2.1.0.zip
+9189ac650b258528f51fa83d5bdd0c8f165c969d00b5a82ccdaf824684de188c8db10f92eb125591351aefcf1012cf198a07c643b3b8a3a7c2c8074e143cc926  terminus-2.1.0.zip
+f16a963cd65f4ebe23918571ffd49c1a0fca315040012d1600a3292e6a79a2c88181ddc5a252329c4edcc8a5b5bc3d08d23c8e12f36f469b2a8856345bef33ea  overpass-2.1.0.zip
+a4d6038e2c87cd481e29204adfb870b7af996d56a101bf7b8ef56682083888a63f48109c6d0be0b9b81ea2ebb6ce7e9c9ee0ad8006fed806ff3f9e4c6ddefe67  ibm-plex-2.1.0.zip
+9a2fbd17c9af420b27dccbd6f4e3e2af133cce91e549d8427d8a8d78e825e1b79495884c18c13b189e7a8d7b58bb3e7029e132ac6d79cac3cf0406d44e6f05c8  liberation-2.1.0.zip"
