--- a/main/efitools/APKBUILD
+++ b/main/efitools/APKBUILD
@@ -14,6 +14,7 @@ source="https://git.kernel.org/pub/scm/linux/kernel/git/jejb/efitools.git/snapsh
 	001-datatypes.patch
 	002-fix-parallel-make.patch
 	003-fix-wchar_t.patch
+	004-typo.patch
 	"
 
 prepare() {
@@ -33,4 +34,5 @@ package() {
 sha512sums="77e0ad7e865814ed388ff6daabe0f4b49ba51672bf2cbb98b7905e209cbd28f9ede2f73213ce45af8a978c1e67dba24ec88a1188661317cc22317b47e575cde8  efitools-1.9.2.tar.gz
 cd72161a99b26472909a8da834c08a1f88b54d35291a6646562b03a6616fa5fb61e49d4fb3c780861689d23823c101709890dd245dd8aa9f51dca40ac1b2d369  001-datatypes.patch
 7afe87e9b44ed3e10200770d3079e4e14b6d39c54c05538031e93d021631427fed47781b016b46f58b8fe6d21f1f3c78667b2b502aa20b99516aa980303aa2ad  002-fix-parallel-make.patch
-bd31e51c6d80ab3fdfe0e7abea1cd6f982d63a96a345c0e75f438f6a219bf64b1510f0dabdcc49d24cc788c06ff4ccfbccde0c1aead9c00b65eaf2977e87e742  003-fix-wchar_t.patch"
+bd31e51c6d80ab3fdfe0e7abea1cd6f982d63a96a345c0e75f438f6a219bf64b1510f0dabdcc49d24cc788c06ff4ccfbccde0c1aead9c00b65eaf2977e87e742  003-fix-wchar_t.patch
+e34d4d8f420a29cfc50a9f98dcbb048016f2fc535ddb3e39482e58f44b37db672410ffab24392751818d72b1e914d77644cae8f7a92bb9af7fe2a9f726a230e9  004-typo.patch"
