community/nerd-fonts: add Ubuntu, Arimo and Source Code Pro, Cascadia Code and Tinos

--- a/community/nerd-fonts/APKBUILD
+++ b/community/nerd-fonts/APKBUILD
@@ -1,13 +1,12 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=nerd-fonts
 pkgver=2.1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Iconic font aggregator, collection and patcher"
 url="https://nerdfonts.com"
 arch="noarch"
 options="!check" # No testsuite provided
 license="MIT"
-depends="fontconfig"
 subpackages="
 	font-hermit-nerd:hermit:noarch
 	font-ia-writer-nerd:writer:noarch
@@ -15,6 +14,11 @@ subpackages="
 	font-overpass-nerd:overpass:noarch
 	font-ibm-plex-nerd:plex:noarch
 	font-liberation-nerd:liberation:noarch
+	font-ubuntu-nerd:ubuntu:noarch
+	font-arimo-nerd:arimo:noarch
+	font-source-code-pro-nerd:source_code:noarch
+	font-cascadia-code-nerd:cascadia:noarch
+	font-tinos-nerd:tinos:noarch
 	"
 source="
 	Hermit-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Hermit.zip
@@ -23,10 +27,19 @@ source="
 	overpass-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Overpass.zip
 	ibm-plex-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/IBMPlexMono.zip
 	liberation-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/LiberationMono.zip
+	ubuntu-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Ubuntu.zip
+	ubuntu-mono-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/UbuntuMono.zip
+	arimo-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Arimo.zip
+	source-code-pro-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/SourceCodePro.zip
+	cascadia-code-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/CascadiaCode.zip
+	tinos-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Tinos.zip
 	"
 builddir="$srcdir"
 
 package() {
+	for pkg in $subpackages; do
+		depends="$depends ${pkg%%:*}"
+	done
 	mkdir -p "$pkgdir"
 }
 
@@ -47,35 +60,71 @@ _install_font_ttf() {
 }
 
 hermit() {
+	depends="fontconfig"
 	pkgdesc="$pkgdesc (Hermit)"
 	_install_font_otf Hurmit
 }
 
 writer() {
+	depends="fontconfig"
 	pkgdesc="$pkgdesc (iA Writer)"
 	_install_font_otf 'iM Writing'
 	_install_font_ttf 'iM Writing'
 }
 
 terminus() {
+	depends="fontconfig"
 	pkgdesc="$pkgdesc (Terminus)"
 	_install_font_ttf Terminess
 }
 
 overpass() {
+	depends="fontconfig"
 	pkgdesc="$pkgdesc (Overpass)"
 	_install_font_otf Overpass
 	_install_font_ttf Overpass
 }
 
 plex() {
+	depends="fontconfig"
 	pkgdesc="$pkgdesc (IBM Plex)"
 	_install_font_ttf 'Blex Mono'
 }
 
 liberation() {
+	depends="fontconfig"
 	pkgdesc="$pkgdesc (Liberation)"
 	_install_font_ttf Literation
+}
+
+ubuntu() {
+	depends="fontconfig"
+	pkgdesc="$pkgdesc (Ubuntu)"
+	_install_font_ttf Ubuntu
+}
+
+arimo() {
+	depends="fontconfig"
+	pkgdesc="$pkgdesc (Arimo)"
+	_install_font_ttf Arimo
+}
+
+source_code() {
+	depends="fontconfig"
+	pkgdesc="$pkgdesc (Source Code Pro)"
+	_install_font_ttf 'Sauce Code Pro'
+}
+
+cascadia() {
+	depends="fontconfig"
+	pkgdesc="$pkgdesc (Cascadia Code)"
+	_install_font_ttf Caskaydia
+}
+
+tinos() {
+	depends="fontconfig"
+	pkgdesc="$pkgdesc (Tinos)"
+	_install_font_ttf Tinos
 }
 
 sha512sums="caf9026646ea1756c0c3d4f5ef08b2329ce10f6bfeefd7a4c7cfba1ac16c85e08103cd05fe4ba9c34fc6f35bb1a5a8830053dc5f90f153410fec12ef134bf84a  Hermit-2.1.0.zip
@@ -83,4 +132,10 @@ sha512sums="caf9026646ea1756c0c3d4f5ef08b2329ce10f6bfeefd7a4c7cfba1ac16c85e08103
 9189ac650b258528f51fa83d5bdd0c8f165c969d00b5a82ccdaf824684de188c8db10f92eb125591351aefcf1012cf198a07c643b3b8a3a7c2c8074e143cc926  terminus-2.1.0.zip
 f16a963cd65f4ebe23918571ffd49c1a0fca315040012d1600a3292e6a79a2c88181ddc5a252329c4edcc8a5b5bc3d08d23c8e12f36f469b2a8856345bef33ea  overpass-2.1.0.zip
 a4d6038e2c87cd481e29204adfb870b7af996d56a101bf7b8ef56682083888a63f48109c6d0be0b9b81ea2ebb6ce7e9c9ee0ad8006fed806ff3f9e4c6ddefe67  ibm-plex-2.1.0.zip
-9a2fbd17c9af420b27dccbd6f4e3e2af133cce91e549d8427d8a8d78e825e1b79495884c18c13b189e7a8d7b58bb3e7029e132ac6d79cac3cf0406d44e6f05c8  liberation-2.1.0.zip"
+9a2fbd17c9af420b27dccbd6f4e3e2af133cce91e549d8427d8a8d78e825e1b79495884c18c13b189e7a8d7b58bb3e7029e132ac6d79cac3cf0406d44e6f05c8  liberation-2.1.0.zip
+ae939dff1d3854c7945f21b520e8cd8b5fa143f861e5911be492d1cad14a9cfc07e77ce2314af093702ab2ebbbfee7f69ac8faf95b8cc96cad257452870faf03  ubuntu-2.1.0.zip
+32b8bd58f95552d9d7b50bf8047d5025d240f7f1ea99826c0257427a4a4c7bf811517bfb2416c1adfc2379429455c0b06fcbc401b46ee9b09b0249d64f44a2fa  ubuntu-mono-2.1.0.zip
+c947c27766fd5f4725792d5745cc405b268f9c326da260c97af80ee729443ff39ad9a97fc4f122143ab2306fddedd5e8b55c13e4b3d90d3f65bf4d8559742dc1  arimo-2.1.0.zip
+550884cd0b4ac89e3a63434f636548e468a68763eeebb378ce3ab23971ae68bf3d3bd825cdc2634340da05e1b3712a3220c6cf875c36d946430add216cbfe709  source-code-pro-2.1.0.zip
+43422e7b075a8ae2d9eb77c5bf05cb26c590a1ac288731bdfb84dd1619038a0dd011546f1bcea7c436bc50d25a0a87cb7158c50eb37ed856bfa8757409b9259a  cascadia-code-2.1.0.zip
+9ffa9b3689eddf5f2f22ac36018d0ac7c7cf26ffbc31b6865d7f316dd25f345480425cfc5488e5ac0866b7db5ead727dbf28a711b89c4af04d5a2d05a5bf3550  tinos-2.1.0.zip"
