--- a/testing/py3-iniparse/APKBUILD
+++ b/testing/py3-iniparse/APKBUILD
@@ -2,14 +2,15 @@
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@alpinelinux.org>
 pkgname=py3-iniparse
 _pkgname=iniparse
-pkgver=0.4
-pkgrel=3
+pkgver=0.5
+pkgrel=0
 pkgdesc="INI parser library for Python"
 options="!check" # Testsuite loader broken
 url="https://code.google.com/p/iniparse/"
 arch="noarch"
 license="MIT"
 makedepends="py3-setuptools"
+subpackages="$pkgname-doc"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -24,4 +25,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="d59eae7c1ce474c89eddb0b0cbff5973444571728aa0c6ce5b3632984353415f7eec4de63cf007c276df0d1bb914b2ea5dd0acc00f3a261285c8e2e9883fbe9a  iniparse-0.4.tar.gz"
+sha512sums="b3f10d1b36497c3c5c71cb0a1ac73d74d8944f4ad3b7acc4a4b0246c2f1a20c184d9af20bbb3cb8ec4f57fddfb5e103b92688847debb4200ef0583353d7f9556  iniparse-0.5.tar.gz"
