testing/py3-gpxpy: upgrade to 1.4.0

--- a/testing/py3-gpxpy/APKBUILD
+++ b/testing/py3-gpxpy/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=py3-gpxpy
 _pkgname=${pkgname/py3-/}
-pkgver=1.3.5
-pkgrel=1
-pkgdesc="A python GPX parser"
+pkgver=1.4.0
+pkgrel=0
+pkgdesc="Python3 GPX parser"
 url="https://github.com/tkrajina/gpxpy"
 arch="noarch"
 license="Apache-2.0"
@@ -25,4 +25,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="7dc1a93f93eb3b8827e5dd5ceb3e49dc9d2be7dabddf4fb2b81c64c929f5f640ad6a62fefe9ee2762d5d04431a2e2ca4e57d2d9324dc8803b80840429cb57009  py3-gpxpy-1.3.5.tar.gz"
+sha512sums="3238b89526bf435b43874966c4b25f74080065d6bdbe1757aeb7efdabdaa0e3ae474be50a8fed47cd46881595d9085729509914e3b7e89504fba70b838a9b5c3  py3-gpxpy-1.4.0.tar.gz"
