community/rancid: upgrade to 3.11

--- a/community/rancid/APKBUILD
+++ b/community/rancid/APKBUILD
@@ -1,15 +1,14 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=rancid
-pkgver=3.10
+pkgver=3.11
 pkgrel=0
 pkgdesc="A Cisco config Differ"
 url="http://www.shrubbery.net/rancid/"
 arch="all"
-license="BSD with advertising"
+license="BSD-3-Clause-No-Nuclear-License-2014"
 depends="expect perl logrotate iputils"
-depends_dev=""
-makedepends="$depends_dev openssh-client cvs subversion"
+makedepends="openssh-client cvs subversion"
 install="$pkgname.pre-install"
 subpackages="$pkgname-doc"
 pkgusers="rancid"
@@ -19,9 +18,7 @@ source="ftp://ftp.shrubbery.net/pub/rancid/rancid-$pkgver.tar.gz
 	rancid-2.3.2-conf.patch
 	rancid.logrotate"
 
-builddir="$srcdir"/rancid-$pkgver
 build() {
-	cd "$builddir"
 	./configure \
 		--prefix=/usr \
 		--sysconfdir=/etc/rancid \
@@ -35,12 +32,10 @@ build() {
 
 # does actually nothing
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	install -D -m644 "$srcdir"/rancid.logrotate \
 		"$pkgdir"/etc/logrotate.d/rancid
@@ -49,6 +44,6 @@ package() {
 	install -d -m 0755 -o rancid -g netadm "$pkgdir"/var/log/rancid/old
 }
 
-sha512sums="87dd33d31f7d9372b56587640cf00e9e3239494d0817c4e5d328df6dccb965b470c2dbc293cd141656357bc5c1a36dd4fb25334a390ee23f3c4c837be6bc9a32  rancid-3.10.tar.gz
+sha512sums="060bf8c8a3a509e77960a6b13266d760b01cd0f0f5a4ac0f02c973a42343b291e8a6cce7f690c6c332e1f42e7298ab4a1f739b9a7aadc60ff5d70a6f67e770e6  rancid-3.11.tar.gz
 dbebdecb80483fff45cfdd7a541805f45ee4e180d47a79ce9b71c5aad012d6e782c9a9d29f1de0fc2b89642aeecfc90dfddb86a1e11564e30683fa55e7009d76  rancid-2.3.2-conf.patch
 aefbdeb99acd6840ab7fe75602b4cec2ed07a4eb24d073a951feef22ab7e56aff098bed7e0ca042c977218a2311465780aa5e6203507da8ab43e132df9a21795  rancid.logrotate"
