main/atkmm: fix url=

--- a/main/atkmm/APKBUILD
+++ b/main/atkmm/APKBUILD
@@ -1,10 +1,10 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=atkmm
 pkgver=2.28.0
-pkgrel=0
+pkgrel=1
 pkgdesc="C++ bindings for atk"
 options="!check" # No testsuite
-url="http://gtkmm.sourceforge.net/"
+url="https://www.gtkmm.org/en/"
 arch="all"
 license="LGPL-2.0-or-later"
 makedepends="atk-dev glibmm-dev libsigc++-dev perl"
@@ -14,7 +14,6 @@ source="https://download.gnome.org/sources/atkmm/${pkgver%.*}/atkmm-$pkgver.tar.
 replaces="gtkmm"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -23,7 +22,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
