testing/blinken: fix url=

--- a/testing/blinken/APKBUILD
+++ b/testing/blinken/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=blinken
 pkgver=19.12.1
-pkgrel=0
+pkgrel=1
 arch="all"
-url="http://edu.kde.org/blinken/"
+url="https://edu.kde.org/blinken/"
 pkgdesc="Memory Enhancement Game"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtsvg-dev ki18n-dev kxmlgui-dev kguiaddons-dev kdoctools-dev kdbusaddons-dev kcrash-dev phonon-dev"
