main/gc: fix url=

--- a/main/gc/APKBUILD
+++ b/main/gc/APKBUILD
@@ -1,24 +1,19 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gc
 pkgver=8.0.4
-pkgrel=0
+pkgrel=1
 pkgdesc="A garbage collector for C and C++"
-url="http://hboehm.info/gc/"
+url="https://hboehm.info/gc/"
 arch="all"
-license="GPL"
+license="custom:GPL-like"
 makedepends="libatomic_ops-dev linux-headers"
 subpackages="$pkgname-dev $pkgname-doc libgc++:libgccpp"
 source="http://hboehm.info/gc/gc_source/gc-$pkgver.tar.gz
 	0001-Fix-gctest-with-musl-libc-on-s390x.patch
 	"
-builddir="$srcdir/gc-${pkgver%[a-z]}"
 
 build() {
-	cd "$builddir"
-
-	if [ "$CLIBC" = "musl" ]; then
-		export CFLAGS="$CFLAGS -D_GNU_SOURCE -DNO_GETCONTEXT -DUSE_MMAP -DHAVE_DL_ITERATE_PHDR"
-	fi
+	export CFLAGS="$CFLAGS -D_GNU_SOURCE -DNO_GETCONTEXT -DUSE_MMAP -DHAVE_DL_ITERATE_PHDR"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -30,14 +25,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
 	# two FAILs due to grsecurity
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
