--- a/main/cairomm/APKBUILD
+++ b/main/cairomm/APKBUILD
@@ -1,37 +1,32 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=cairomm
 pkgver=1.12.2
-pkgrel=0
+pkgrel=1
 pkgdesc="C++ bindings to Cairo vector graphics library"
-url="http://www.cairographics.org"
+url="http//www.cairographics.org"
 arch="all"
-license="LGPL-2.0-or-later MPL-1.1"
-depends=""
+license="LGPL-2.0-or-later AND MPL-1.1"
 depends_dev="libsigc++-dev"
 makedepends="$depends_dev cairo-dev perl"
 subpackages="$pkgname-dev $pkgname-doc"
-source="http://www.cairographics.org/releases/$pkgname-$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="http://www.cairographics.org/releases/cairomm-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
-		--prefix=/usr \
-		|| return 1
-	make || return 1
+		--prefix=/usr
+	make
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
 doc() {
-	default_doc || return 1
+	default_doc
 
-	mv "$pkgdir"/usr/share/devhelp "$subpkgdir"/usr/share || return 1
+	mv "$pkgdir"/usr/share/devhelp "$subpkgdir"/usr/share
 	rmdir "$pkgdir"/usr/share
 }
 
