main/charybdis: fix url= and license=

--- a/main/charybdis/APKBUILD
+++ b/main/charybdis/APKBUILD
@@ -2,20 +2,21 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=charybdis
 pkgver=4.1.2
-pkgrel=0
+pkgrel=1
 pkgdesc="A highly-scalable IRCv3-compliant IRC daemon"
-url="http://atheme.org/projects/charybdis.html"
+url="https://github.com/charybdis-ircd/charybdis"
 arch="all"
-license="BSD GPL-2.0"
+license="GPL-2.0-or-later"
 pkgusers="ircd"
 makedepends="automake autoconf libtool
-bison flex openssl-dev zlib-dev file
-sqlite-dev libltdl"
+	bison flex openssl-dev zlib-dev file
+	sqlite-dev libltdl"
 install="$pkgname.pre-install"
 subpackages="$pkgname-openrc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/charybdis-ircd/$pkgname/archive/$pkgname-$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/charybdis-ircd/charybdis/archive/charybdis-$pkgver.tar.gz
 	$pkgname.initd
-	$pkgname.confd"
+	$pkgname.confd
+	"
 builddir="$srcdir"/$pkgname-$pkgname-$pkgver
 
 prepare() {
@@ -49,7 +50,7 @@ check() {
 }
 
 package() {
-	make -j1 DESTDIR="$pkgdir" install	
+	make -j1 DESTDIR="$pkgdir" install
 	install -m755 -D "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/charybdis-ircd
 	install -m644 -D "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/charybdis-ircd
 	mkdir -p "$pkgdir"/var/run/charybdis
