main/dillo: fix url= and license=

--- a/main/dillo/APKBUILD
+++ b/main/dillo/APKBUILD
@@ -2,31 +2,25 @@
 # Maintainer: ScrumpyJack <scrumpyjack@st.ilet.to>
 pkgname=dillo
 pkgver=3.0.5
-pkgrel=6
+pkgrel=7
 pkgdesc="Very small and fast GUI web browser"
-url="http://www.dillo.org"
+url="https://www.dillo.org"
 arch="all"
-license="GPL"
-depends=""
+license="GPL-3.0-or-later"
 makedepends="fltk-dev zlib-dev libx11-dev libpng-dev
 	libjpeg-turbo-dev openssl-dev"
-install=""
 subpackages="$pkgname-doc"
-source="http://www.dillo.org/download/${pkgname}-${pkgver}.tar.bz2
+source="http://www.dillo.org/download/dillo-$pkgver.tar.bz2
 	dillo.desktop
 	dillo.png
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
-	default_prepare || return 1
-
-	cd "$builddir"
-	update_config_sub || return 1
+	default_prepare
+	update_config_sub
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -38,25 +32,21 @@ build() {
 		--enable-gif \
 		--enable-jpeg \
 		--enable-ipv6 \
-		--enable-ssl \
-		|| return 1
-	make || return 1
+		--enable-ssl
+	make
 }
 
 package() {
-        cd "$builddir"
-        make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 
-        mkdir -p "$pkgdir"/usr/share/doc/$pkgname/
-        install -m644 AUTHORS ChangeLog README NEWS \
-        	"$pkgdir"/usr/share/doc/$pkgname/ || return 1
+	mkdir -p "$pkgdir"/usr/share/doc/$pkgname/
+	install -m644 AUTHORS ChangeLog README NEWS \
+		"$pkgdir"/usr/share/doc/$pkgname/
 
 	install -Dm644 "$srcdir"/dillo.desktop \
-		"$pkgdir"/usr/share/applications/dillo.desktop \
-		|| return 1
+		"$pkgdir"/usr/share/applications/dillo.desktop
 	install -Dm644 "$srcdir"/dillo.png \
-		"$pkgdir"/usr/share/pixmaps/dillo.png \
-		|| return 1
+		"$pkgdir"/usr/share/pixmaps/dillo.png
 }
 
 sha512sums="d0e86f57e50da762debf592b6deb94de5ee58f84e0cae1159890262540a463aea8143d2b99c634021c1f273f91c2fe0918f30d72c3eaf91fdb541e741469b155  dillo-3.0.5.tar.bz2
