--- a/community/gegl/APKBUILD
+++ b/community/gegl/APKBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gegl
 pkgver=0.4.16
-pkgrel=3
+pkgrel=4
 pkgdesc="Graph based image processing framework"
-url="https://www.gegl.org/"
+url="http://www.gegl.org/"
 arch="all !s390x" # Limited by librsvg
-license="GPL-3.0 LGPL-3.0"
+license="GPL-3.0-or-later AND LGPL-3.0-or-later"
 makedepends="babl-dev libpng-dev libjpeg-turbo-dev gtk+-dev librsvg-dev
 	lua5.1-dev gexiv2-dev json-glib-dev libraw-dev libwebp-dev pango-dev
 	gdk-pixbuf-dev ffmpeg-dev vala"
