--- a/main/heimdal/APKBUILD
+++ b/main/heimdal/APKBUILD
@@ -3,16 +3,15 @@
 pkgname=heimdal
 pkgver=7.7.0
 _ver=${pkgver/_rc/rc}
-pkgrel=0
+pkgrel=1
 pkgdesc="An implementation of Kerberos 5"
 arch="all"
-url="http://www.h5l.org/"
+url="https://github.com/heimdal/"
 license="BSD-3-Clause"
 depends="krb5-conf"
 depends_dev="openssl-dev e2fsprogs-dev db-dev"
 makedepends="$depends_dev autoconf automake bash gawk libtool
 	ncurses-dev perl readline-dev sqlite-dev texinfo perl-json"
-install=
 options="suid !check" #FIXME: FAIL: snprintf-test
 subpackages="$pkgname-doc $pkgname-dev $pkgname-libs $pkgname-openrc"
 source="https://github.com/heimdal/heimdal/releases/download/heimdal-$pkgver/heimdal-$pkgver.tar.gz
@@ -37,14 +36,12 @@ builddir="$srcdir/$pkgname-$_ver"
 prepare() {
 	[ -e /usr/lib/libasn1.so ] && echo "## remove old heimdal pkg first ##" && return 1
 
-	cd "$builddir"
 	default_prepare
 
 	sh ./autogen.sh
 }
 
 build() {
-	cd "$builddir"
 	export LDFLAGS="${LDFLAGS} -Wl,--as-needed"
 	export LIBS="-ldb"
 
@@ -73,12 +70,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" exec_prefix=/usr sysconfdir=/etc \
 	mandir=/usr/share/man infodir=/usr/share/info datadir=/var/lib/heimdal \
 	localstatedir=/var/lib/heimdal libexecdir=/usr/sbin install
@@ -102,7 +97,7 @@ package() {
 
 	# Compress info pages
 	for page in heimdal hx509; do
-		gzip -9 "$pkgdir"/usr/share/info/${page}.info
+		gzip -9 "$pkgdir"/usr/share/info/$page.info
 	done
 
 	# Install the license
