--- a/community/i2c-tools/APKBUILD
+++ b/community/i2c-tools/APKBUILD
@@ -2,17 +2,16 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=i2c-tools
 pkgver=4.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Tools for monitoring I2C devices"
-url="http://www.lm-sensors.org/wiki/I2CTools"
+url="https://i2c.wiki.kernel.org/index.php/I2C_Tools"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later AND LGPL-2.1-or-later"
 options="!check" #no test/check provided by upstream
 makedepends="linux-headers python3-dev"
 subpackages="$pkgname-dev $pkgname-doc py3-smbus:py"
-source="https://fossies.org/linux/misc/$pkgname-$pkgver.tar.gz"
+source="https://fossies.org/linux/misc/i2c-tools-$pkgver.tar.gz"
 
-builddir="$srcdir"/$pkgname-$pkgver
 
 prepare() {
 	default_prepare
@@ -25,7 +24,7 @@ build() {
 	make
 
 	cd "$builddir"/py-smbus
-	CFLAGS="$CFLAGS -I${builddir}/include" python3 setup.py build
+	CFLAGS="$CFLAGS -I$builddir/include" python3 setup.py build
 }
 
 py() {
