community/ktoblzcheck: drop python2

--- a/community/ktoblzcheck/APKBUILD
+++ b/community/ktoblzcheck/APKBUILD
@@ -2,14 +2,17 @@
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=ktoblzcheck
 pkgver=1.50
-pkgrel=0
+pkgrel=1
 pkgdesc="A library to check account numbers and bank codes of german banks"
 url="http://ktoblzcheck.sourceforge.net/"
 arch="all"
 license="LGPL-2.1-or-later"
-makedepends="cmake python2-dev"
+makedepends="cmake"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://downloads.sourceforge.net/sourceforge/ktoblzcheck/ktoblzcheck-$pkgver.tar.gz"
+source="https://downloads.sourceforge.net/sourceforge/ktoblzcheck/ktoblzcheck-$pkgver.tar.gz
+	fix_missing_BANKDATA_PATH.patch
+	0001_drop_python2_detection.patch
+	"
 
 build() {
 	cmake \
@@ -28,4 +31,6 @@ package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="b34b771d1f4f1935c714ecded1c09066846385485ea4b7b21dd5219a01acec7e7204c1da723b42babda5d3f21f4471d1a1902bb7b5350d0f564ae3447c1d154d  ktoblzcheck-1.50.tar.gz"
+sha512sums="b34b771d1f4f1935c714ecded1c09066846385485ea4b7b21dd5219a01acec7e7204c1da723b42babda5d3f21f4471d1a1902bb7b5350d0f564ae3447c1d154d  ktoblzcheck-1.50.tar.gz
+83858c544d73baff5f11e2261dfb54cd564fd3adc338b28acd4d3dc1fa5f33cbf8d0660c958c743db4c5e0cf3a00f2c5fc315b92a5757afd9ace5ab2d28714b2  fix_missing_BANKDATA_PATH.patch
+9ab4dbfc7a45edd9ebaa89904c2ade363ec93ac1511d4de7ce192bb3233c1e2387f6878d6700d075758d1bb64cd5e40c3045e2663da35d9de09037fc84a0b0f8  0001_drop_python2_detection.patch"
