testing/kdf: disable on armhf
Dependency extra-cmake-modules missing.

--- a/testing/kdf/APKBUILD
+++ b/testing/kdf/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kdf
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf"
 url="https://kde.org/applications/system/org.kde.kdf"
 pkgdesc="View disk usage"
 license="GPL-2.0-or-later"
