testing/kblackbox: disable on armhf
Dependency extra-cmake-modules missing.

--- a/testing/kblackbox/APKBUILD
+++ b/testing/kblackbox/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kblackbox
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf"
 url="https://kde.org/applications/games/org.kde.kblackbox"
 pkgdesc="A game of hide and seek played on a grid of boxes"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
