--- a/main/gpicview/APKBUILD
+++ b/main/gpicview/APKBUILD
@@ -1,39 +1,25 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gpicview
 pkgver=0.2.5
-pkgrel=0
+pkgrel=1
 pkgdesc="Picture viewer of the LXDE Desktop"
 url="https://wiki.lxde.org/en/GPicView"
 arch="all"
-license="GPL-2.0"
-depends=
+license="GPL-2.0-or-later"
 subpackages="$pkgname-lang"
 makedepends="gtk+-dev intltool libjpeg-turbo-dev"
-source="https://downloads.sourceforge.net/project/lxde/GPicView%20%28image%20Viewer%29/${pkgver%.*}.x/gpicview-$pkgver.tar.gz"
-source="https://downloads.sourceforge.net/project/lxde/GPicView%20%28image%20Viewer%29/${pkgver%.*}.x/gpicview-${pkgver}.tar.xz"
-
-prepare() {
-	cd "$srcdir/$pkgname-$pkgver"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
-}
+source="https://downloads.sourceforge.net/project/lxde/GPicView%20%28image%20Viewer%29/${pkgver%.*}.x/gpicview-$pkgver.tar.xz"
 
 build() {
-	cd "$srcdir/$pkgname-$pkgver"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--sysconfdir=/etc \
-		--prefix=/usr \
-		|| return 1
-	make || return 1
+		--prefix=/usr
+	make
 }
 
 package() {
-	cd "$srcdir/$pkgname-$pkgver"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 sha512sums="afc7e67c7ae1252f9c1816ee46fe69e96ea7be9a60e03406a539f17b2e4f0e4b93a028c6f3f1c455f5433d6d7d78a58dcee2cb0ac91ea53093a21935bf454afd  gpicview-0.2.5.tar.xz"
