--- a/main/gtk-engines/APKBUILD
+++ b/main/gtk-engines/APKBUILD
@@ -1,12 +1,12 @@
-# Contributor: 
+# Contributor:
 # Maintainer:
 pkgname=gtk-engines
 pkgver=2.21.0
-pkgrel=2
+pkgrel=3
 pkgdesc="collection of gtk+ engines"
 url="https://www.gtk.org/"
 arch="all"
-license="GPL"
+license="LGPL-2.1-or-later"
 depends="$pkgname-clearlooks
 	$pkgname-crux
 	$pkgname-industrial
@@ -15,38 +15,27 @@ depends="$pkgname-clearlooks
 	$pkgname-thinice
 	"
 makedepends="gtk+-dev intltool"
-install=
 subpackages="$pkgname-lang $pkgname-dev $depends"
-source="https://dev.alpinelinux.org/archive/$pkgname/$pkgname-$pkgver.tar.gz"
+source="https://dev.alpinelinux.org/archive/gtk-engines/gtk-engines-$pkgver.tar.gz"
 
-_builddir="${srcdir}/${pkgname}-${pkgver}"
 prepare() {
-	local i
-	cd "$_builddir"
-	update_config_sub || return 1
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
+	default_prepare
+	update_config_sub
 }
 
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--enable-animation \
-		--disable-scrollkeeper \
-		|| return 1
-	make || return 1
+		--disable-scrollkeeper
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
 _mv_engine() {
