community/gvm-libs: fix url= and license=

--- a/community/gvm-libs/APKBUILD
+++ b/community/gvm-libs/APKBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=gvm-libs
 pkgver=11.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Greenbone Vulnerability Management Libraries"
-url="http://www.openvas.org/"
+url="https://www.openvas.org/"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 options="!nocheck" # test fails: https://github.com/greenbone/gvm-libs/issues/279
 pkgusers="gvm"
 pkggroups="gvm"
