community/gvmd: fix url= and license=

--- a/community/gvmd/APKBUILD
+++ b/community/gvmd/APKBUILD
@@ -2,18 +2,18 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=gvmd
 pkgver=9.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Greenbone Vulnerability Manager"
-url="http://www.openvas.org/"
+url="https://www.openvas.org/"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 pkgusers="gvm"
 pkggroups="gvm"
 depends="rsync postgresql postgresql-contrib libxslt sed gnutls-utils gvm-libs"
 makedepends="cmake gvm-libs-dev clang-dev glib-dev
 	gpgme-dev libgcrypt-dev graphviz libical-dev
 	postgresql-dev gnutls-dev
-	doxygen libxslt xmltoman perl-sql-translator"
+	doxygen xmltoman perl-sql-translator"
 checkdepends="cppcheck"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/greenbone/gvmd/archive/v$pkgver.tar.gz
